<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/icPesquisar"
        android:title="@string/pesquisar"
        android:icon="@drawable/ic_search_black_24dp"
        android:iconTint="@color/branco"
        android:orderInCategory="100"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:title="Listar Mesas"
          android:id="@+id/itemLista"
          android:iconTint="@color/branco">
        <menu>
            <item
                android:id="@+id/icListaMesasAbertas"
                android:title="@string/abertas" />
            <item
                android:id="@+id/icListaMesasTodas"
                android:title="@string/todas" />
        </menu>
    </item>

</menu>
