<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/preto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tbrFgtCadastroProdutos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:logo="@mipmap/logo_gdm"
            app:title="@string/title_activity_cadastro_produtos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Código"
                android:textColor="@color/branco"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtCodigoCadastroProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:digits="1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                android:elevation="16dp"
                android:ems="10"
                android:hint="@string/hint_codigo"
                android:inputType="text|textPersonName"
                android:textColorHighlight="@color/colorAccent"
                android:textColorHint="@color/cinza" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descricao"
                android:textColor="@color/branco"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtDescricaoCadastroProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:elevation="16dp"
                android:ems="10"
                android:hint="@string/hint_descricao"
                android:inputType="textPersonName"
                android:textColorHint="@color/cinza" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textColor="@color/branco"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spnCategoriasCadastroProdutos"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:foregroundGravity="center_vertical"
                android:isScrollContainer="true"
                android:persistentDrawingCache="animation"
                android:pointerIcon="arrow"
                android:scrollIndicators="right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valor"
                android:textColor="@color/branco"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtValorCadastroProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_valor"
                android:inputType="numberDecimal"
                android:textColorHint="@color/cinza" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConfirmarCadastroProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@color/preto"
                android:drawableLeft="@drawable/ic_check_black_24dp"
                android:drawableTint="@color/verde"
                android:text="@string/confirmar"
                android:textColor="@color/branco"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnCancelarCadastroProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:background="@color/preto"
                android:drawableLeft="@drawable/ic_close_black_24dp"
                android:drawableTint="@color/vermelho"
                android:elevation="5dp"
                android:text="@string/cancelar"
                android:textColor="@color/branco"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
